--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,54 +1,21 @@
-header{
-        background-color: bisque;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 30px;
-    img{
-        width: 200px;
-        height: 200px;
-    }
-    nav ul{
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        column-gap: 20px;
-        padding: 20px 40px;
-        li a{
-            text-decoration: none;
-            font-size: 20px;
-            color: black;
-            font-weight: 500;
-        }
-    }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+html{
+    font-family: Arial, Helvetica, sans-serif;
+}
 
-    @media screen and (min-width: 768px){
-        header{
-            flex-direction: row;
-        }
-    
-        header nav ul{
-            flex-direction: row;
-        }
-    }
-    
-    @media screen and (min-width: 1024px){
-        .conteiner-contacto{
-            flex-direction: row;
-        }
-    }
+@import "header";
+@import "main-index";
 
-    section{
-        margin-top: 50px;
-        h1{
-            margin: 20px;
-            font-size: 60px;
-            text-align: center;
-        }
-    }
+
+
+    
+
 
     footer{
         background-color: beige;
@@ -65,24 +32,6 @@ header{
         }
     }
 
-    .contenedor-flex{
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        gap: 20px;
-        .card{
-            width: 350px;
-            height: 250px;
-            margin: 50px;
-            padding: 50px;
-            img{
-                width: 100%;
-                .bombillas{
-                    height: 300px;
-                }
-            }
-            }
-        }
 
         .card-text{
             display: flex;
@@ -122,4 +71,20 @@ header{
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+
+@media screen and (min-width: 768px){
+    header{
+        flex-direction: row;
+    }
+
+    header nav ul{
+        flex-direction: row;
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .conteiner-contacto{
+        flex-direction: row;
+    }
 }
